[package]
name = "re_tester"
version = "0.1.0"
edition = "2018"


[profile.release]
debug = false
lto = true
codegen-units=1
opt-level = 3
panic = 'abort'  # does cleanup upon panics
trustflags = ["-C", "target-cpu=native"]

[[bin]]
path="src/fltk_re_tester.rs"
name="re_test"
package="re_test"

[[bin]]
path="src/nwg_re.rs"
name="re"
package="re_test"

[[bin]]
path="src/nwg_test.rs"
name="nwg"  
package="re_test"

[dependencies]
druid = { git = "https://github.com/linebender/druid", rev = "06b37f4" }
fltk = {version = "1.1.7", features = ["fltk-bundled"] }
fltk-theme = "0.1.8"
regex = "1.5.4"
log = "0.4.14"
cpu-time = "1.0.0"
chrono = {version = "0.4.19", features = ["serde"] }
dirs = "3"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static ="1.4.0"
native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui/", rev="9b9d641" }
# native-windows-derive = { git = "https://github.com/gabdube/native-windows-gui/", rev ="0cd2ef8" }

[build-dependencies]
embed-resource = "1.6"

